changed layout and added functionality for contact form

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: minima
+future: true
+excerpt_separator: <!--more-->
 plugins:
   - jekyll-feed
 
